Search API Pages 1.x, dev (xxxx-xx-xx):
---------------------------------------
- #2699913 by dsdeiz, drunken monkey: Fixed Page Manager integration.
- #1664706 by Les Lim, drunken monkey: Added static caching to hook_forms()
  implementation.
- #1377292 by drunken monkey: Fixed search form block for anonymous users.
- #2592143 by drunken monkey: Improved template documentation to state title is
  unsanitized.
- #2498525 by drunken monkey, GDrupal: Fixed warnings for empty results.
- #2528592 by marcingy: Fixed old search page titles being displayed until
  manual menu rebuild.
- #2315713 by pontus_nilsson, DamienMcKenna, drunken monkey, kallehauge: Added
  Panels support for search pages.

Search API Pages 1.2 (2015-06-03):
----------------------------------
- #2425179 by DamienMcKenna, drunken monkey: Added a CTools plugin for the
  search box.
- #2392289 by AndrewsizZ: Fixed error when there are no results to display.
- #2358735 by drunken monkey: Added access check when viewing the search block.
- #2345601 by sjancich: Fixed search block caching.
- #2334647 by jseffel: Fixed rendering of unknown items.
- #2244981 by drunken monkey: Fixed theming code to not try to load results if
  there are none.
- #1368152 by rooby, mparker17, acrazyanimal, jagermonster, ohthehugemanatee,
  drunken monkey, milesw, Roderik de Langen: Added an option to allow search
  pages to support facet-only searching.

Search API Pages 1.1 (2014-05-24):
----------------------------------
- #2259109 by DamienMcKenna, drunken monkey: Added a "placeholder" attribute
  for the search block.
- #1371482 by rooby, DamienMcKenna: Added per-page permissions.
- #2189633 by acrazyanimal: Added the search page ID to the query options.
- #2179399 by mparker17, drunken monkey: Fixed recognition of non-standard
  entity indexes.
- #2134731 by drunken monkey: Fixed notices when trying to display the block of
  a disabled search page.

Search API Pages 1.0 (2013-09-01):
----------------------------------